syntax = "proto3";

package pb;

option go_package = "./pkg/pb";

message UserRequest {
    string id = 1;
    string name = 2;
    string email = 3;
    string cpf = 4;
    map<string, string> attributes = 5;
}